src/test/resources/annotators/wrong_modifiers_order_in_structs.v
module annotators

struct Foo {
<error descr="Use 'pub mut' instead of 'mut pub'">mut pub:</error>
	a int
pub mut:
	b int
}
